--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,39 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+  font-family: "Prototype";
+  src: url(../public/fonts/Prototype.ttf)
+    format("truetype-variations");
+  font-weight: 700;
+  font-style: normal;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@font-face {
+  font-family: "NotoSans";
+  src: url(../public/fonts/NotoSans-VariableFont_wdth\,wght.ttf)
+    format("truetype-variations");
+  font-weight: 100 900;
+  font-style: normal;
+}
+@font-face {
+  font-family: "NotoSansItalic";
+  src: url(../public/fonts/NotoSans-Italic-VariableFont_wdth\,wght.ttf)
+    format("truetype-variations");
+  font-weight: 100 900;
+  font-style: italic;
+}
+@layer base {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Prototype", sans-serif;
+    font-weight: 700;
   }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  body {
+    font-family: "NotoSans", sans-serif;
+    font-weight: 400;
   }
 }
